# subprocess

./: .gitignore  CMakeLists.txt  CMakeLists_8txt.html  CowData_8cpp.html  CowData_8hpp.html  CowData_8hpp_source.html  Doxyfile  LICENSE  PipeVar_8hpp.html  PipeVar_8hpp__dep__incl.map  PipeVar_8hpp__dep__incl.md5  PipeVar_8hpp__incl.map  PipeVar_8hpp__incl.md5  PipeVar_8hpp_source.html  ProcessBuilder_8cpp.html  ProcessBuilder_8cpp__incl.map  ProcessBuilder_8hpp.html  ProcessBuilder_8hpp__dep__incl.map  ProcessBuilder_8hpp__dep__incl.md5  ProcessBuilder_8hpp__incl.map  ProcessBuilder_8hpp__incl.md5  ProcessBuilder_8hpp_source.html  ProcessBuilder__windows_8cpp.html  README.md  README_8md.html  annotated.html  basic__types_8hpp.html  basic__types_8hpp__dep__incl.map  basic__types_8hpp__dep__incl.md5  basic__types_8hpp__incl.map  basic__types_8hpp__incl.md5  basic__types_8hpp_source.html  classes.html  classsubprocess_1_1CowData.html  classsubprocess_1_1CwdGuard-members.html  classsubprocess_1_1CwdGuard.html  classsubprocess_1_1CwdGuard__inherit__graph.map  classsubprocess_1_1CwdGuard__inherit__graph.md5  classsubprocess_1_1Data-members.html  classsubprocess_1_1Data.html  (+139 more)
.github/workflows/: test.yml
docs/: CMakeLists_8txt.html  CowData_8hpp.html  CowData_8hpp__incl.map  CowData_8hpp__incl.md5  CowData_8hpp_source.html  PipeVar_8cpp.html  PipeVar_8hpp.html  PipeVar_8hpp__dep__incl.map  PipeVar_8hpp__incl.map  PipeVar_8hpp__incl.md5  PipeVar_8hpp_source.html  ProcessBuilder_8cpp__incl.md5  ProcessBuilder_8hpp.html  ProcessBuilder_8hpp__dep__incl.md5  ProcessBuilder_8hpp__incl.map  ProcessBuilder_8hpp__incl.md5  ProcessBuilder_8hpp_source.html  README_8md.html  annotated.html  basic__types_8hpp.html  basic__types_8hpp__dep__incl.map  basic__types_8hpp__dep__incl.md5  basic__types_8hpp__incl.map  basic__types_8hpp__incl.md5  basic__types_8hpp_source.html  classes.html  classsubprocess_1_1CowData-members.html  classsubprocess_1_1CwdGuard-members.html  classsubprocess_1_1CwdGuard.html  classsubprocess_1_1CwdGuard__inherit__graph.map  classsubprocess_1_1CwdGuard__inherit__graph.md5  classsubprocess_1_1EnvGuard-members.html  classsubprocess_1_1EnvGuard.html  classsubprocess_1_1EnvGuard__inherit__graph.map  classsubprocess_1_1Environ-members.html  classsubprocess_1_1Environ.html  classsubprocess_1_1EnvironSetter-members.html  classsubprocess_1_1EnvironSetter.html  classsubprocess_1_1ProcessBuilder-members.html  classsubprocess_1_1ProcessBuilder.html  (+90 more)
docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+36 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+41 more)
src/cpp/: CMakeLists.txt  ProcessBuilder.cpp  ProcessBuilder.hpp  basic_types.hpp  pipe.hpp  shell_utils.cpp  subprocess.hpp
src/cpp/subprocess/: CowData.hpp  PipeVar.hpp  ProcessBuilder.cpp  ProcessBuilder.hpp  ProcessBuilder_posix.cpp  ProcessBuilder_windows.cpp  basic_types.hpp  environ.cpp  environ.hpp  pipe.cpp  pipe.hpp  shell_utils.cpp  shell_utils.hpp  utf8_to_utf16.cpp  utf8_to_utf16.hpp
test/: CMakeLists.txt  basic_test.cpp  cat_child.cpp  dependencies.teaspec  echo_main.cpp  examples.cpp  printenv_main.cpp  sleep_main.cpp  test_config.h.in
test/dependencies/: meta.json
test/dependencies/cxxtest/: cxxtest.teaspec
test/dependencies/cxxtest/python/python3/cxxtest/: cxxtestgen.py
